Fri Feb 29 03:05:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/modelin/Picmlin_App.cpp:
         
          Added more debug messages that generated during verbose 
          mode.

Fri Feb 29 03:04:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/config/cuts_gme.mpb:

          Fixed the project specification for static builds of GME.

Thu Feb 28 21:04:30 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/connector:
        * integration/connector/picmlin.build:

          Moved the connector to its own folder.

        * integration/include/picmlin.build:

          Removed this file.

Thu Feb 28 21:01:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/picmlin.build:

          Initila commit of the CUTS connector integration script.

Thu Feb 28 06:16:16 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/schemas/modelgen.xsd:

          Schema definition was missing the top element.

Tue Feb 26 17:59:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/schemas/modelgen.xsd:

          Initial commit of the generator's XML schema definition.

Mon Feb 25 05:01:27 UTC 2008  James H. Hill  <hillj@isis.vanderiblt.edu>

        * cuts/Component_Registry.h:
        * cuts/Component_Registry.cpp:

          Overloaded unregister_component () to return the registration
          node for the component.

Mon Feb 25 04:59:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-execution-paths.sql:

          cuts.select_execution_path_cumulative () now returns the name
          of the path in the result set.

Sun Feb 24 00:58:56 UTC 2008  James H. Hill  <hillj@isis.vanderiblt.edu>

        * etc/SQL/CUTS-deployment.sql:
        * etc/SQL/CUTS-execution-paths.sql:
        * etc/SQL/CUTS-performance.sql:

          Implemented new stored procedures to data minining process.
